added carousel buttons for desktop

--- a/index.html
+++ b/index.html
@@ -347,16 +347,21 @@
                         />
                     </div>
                     <!--4-->
+
+                    <!--Left Button-->
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselDesktop" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
+                    <!--Left Button-->
+
+                    <!--Right Button-->
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselDesktop" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
+                    <!--Right Button-->
                 </div>
-                
                 <!--Carousel Items-->
             </div>
         </div>
